<resources>
    <string name="app_name">Hover</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="todo">TODO</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="continue_button">Continue</string>
    <string name="hover_will_send_an_sms_message_to_verify_your_phone_number">Hover will send an SMS message to verify your phone number.</string>
    <string name="enter_the_otp_code_to_verify_your_phone_number">Enter the OTP code to verify your phone number</string>
    <string name="verify_923495745346">Verify +923495745346</string>
    <string name="profile_info">Profile Info</string>
    <string name="please_set_your_name_and_an_optional_profile_image">Please set your name and an optional profile image</string>
    <string name="type_your_name">Type your name</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="settings_2">Settings</string>
    <string name="audio_call">Audio Call</string>
    <string name="settings_1">Settings</string>
    <string name="block">Block</string>
    <string name="profile">Profile</string>
    <string name="video_call">Video Call</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="sample_name">Sample Name</string>
    <string name="jalil_asif">Jalil Asif</string>
    <string name="online">Online</string>
    <string name="type_a_message">Type a message…</string>
    <string name="textview">TextView</string>
    <string name="_06_00pm">06:00PM</string>
    <string name="delete_for_everyone">Delete for Everyone</string>
    <string name="cancel">Cancel</string>
    <string name="delete_for_me">Delete for Me</string>
    <string name="h_o_v_e_r">H O V E R</string>
    <string name="user_name">User Name:</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="about">About:</string>
    <string name="your_status">Enter Your Status</string>
    <string name="save">Save</string>
</resources>